styles.css
/**
 * Copyright 2019 Groovenauts, Inc. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * =============================================================================
 */

html, body {
  font-family: 'Roboto', sans-serif;
  margin: 0;
  padding: 0;
}
body {
  display: flex;
  flex-direction: column;
  background: #FFFFFF 0% 0% no-repeat padding-box;
}
button:focus {
  outline: 0;
}

root {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

header {
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 60px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-size: 18px;
  text-align: center;
  background: #409C3B 0% 0% no-repeat padding-box;
  z-index: 20;
}

.menu {
  position: fixed;
  z-index: 100;
  margin-left: 10px;
}

#menu-button {
  z-index: 100;
}

.main {
  position: relative;
  top: 340px;
  left: 0;
  display: flex;
  flex-direction: column;
  margin: 9px auto 0;
  justify-content: center;
}

.loading-message {
  text-align: center;
}

.webcam-container {
  position: fixed;
  top: 60px;
  width: 224px;
  height: 100%;
  right: 0px;
  display: flex;
  justify-content: center;
  background: #F5F5F5 0% 0% no-repeat padding-box;
  border: 1px solid #BDBDBD;
  z-index: 10;
}

.webcam-box-outer {
  border: 1px solid #BDBDBD;
  box-sizing: border-box;
  display: inline-block;
  padding: 0px;
  background: #F5F5F5 0% 0% no-repeat padding-box;
}

.webcam-box-inner {
  box-sizing: border-box;
  display: flex;
  justify-content: center;
  overflow: hidden;
  width: 224px;
  height: 224px;
}

video.webcam {
}

.webcam-controller {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  padding: 5px;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-bottom-color: #6E6E6E;
}

.webcam-controller-button {
  display: flex;
  border: 0px;
  width: 49px;
  height: 49px;
  padding: 2px;
  background: #F5F5F5 0% 0% no-repeat padding-box;
}

.webcam-controller-button-icon {
  font-size: 45px !important;
  color: #6E6E6E;
}

#selectors {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  overflow: hidden;
}

.add-selector-cell {
  display: flex;
  align-items: center;
  height: 244px;
  width: 244px;
  border-style: solid;
  border-color: #409C3B;
  border-width: 1px;
  justify-content: center;
  position: relative;
  margin-right: 30px;
}

.add-selector-cell > .material-icons {
  font-size: 69px;
  color: #1B5E20;
}

.selector-cell {
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: relative;
  width: 224px;
  height: 224px;
  margin: 10px;
}

.selector-label {
  display: flex;
  justify-content: center;
  position: absolute;
  top: 0px;
  left: 0px;
  width: 36px;
  height: 36px;
  background: #FEC600;
  z-index: 2;
}

.selector-label-text {
  color: gray;
  font-size: 24px;
  padding: 6px;
}

.selector-cell.focused {
  border: 10px solid #FEC600 ;
  margin: 0px;
}

.selector-cell.predicted {
}

.selector-cell:not(.focused) {
  margin: 10px;
}

.selector-canvas-container {
  position: absolute;
  top: 0px;
}

.flip-image {
  transform: scaleX(-1);
}

.capture-button {
  position: absolute;
  left: 4px;
  bottom: 4px;
}

#trainer {
  position: ;
  display: block;
  flex-direction: column;
  justify-content: center;
  right: 100%;
  width: 300px;
}

#trainer > div{
  display: flex;
  justify-content: center;
}

.training-progress-bar {
  position: relative;
  z-index: 999;
  margin-top: 0px;
  margin-bottom: 0px;
  height: 4px;
  width: 100%;
  top: -4px;
}

.uploading-spinner {
  margin: 10px;
}

#train-button {
  margin: 0px;
  padding: 0px;
  border-radius: 0px;
}

#save-button {
  margin: 10px;
}

.access-key {
  margin: 10px;
}

.access-key-textbox {
  margin-top: 0px;
  margin-bottom: 0px;
  margin-left: 10px;
  margin-right: 10px;
  padding: 4px;
}

.access-key-copy-button {
  margin: 0px;
}

